# aiready

./: .gitignore  LICENSE  README.md  pyproject.toml
src/aiready/: __init__.py  cli.py  crawler.py  extractor.py  generator.py  summarizer.py
src/llmstxt_generator/: __init__.py  cli.py  crawler.py  generator.py  summarizer.py
