[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "llmstxt-generator"
version = "0.1.0"
description = "Generate llms.txt files for any website or local folder"
readme = "README.md"
license = "MIT"
authors = [
    { name = "Bineric Labs", email = "hello@bineric.ai" }
]
keywords = ["llms", "llms.txt", "ai", "documentation", "crawler"]
classifiers = [
    "Development Status :: 4 - Beta",
    "Intended Audience :: Developers",
    "License :: OSI Approved :: MIT License",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
]
requires-python = ">=3.10"
dependencies = [
    "httpx>=0.27.0",
    "beautifulsoup4>=4.12.0",
    "lxml>=5.0.0",
    "click>=8.1.0",
    "rich>=13.0.0",
    "python-dotenv>=1.0.0",
    "anthropic>=0.40.0",
]

[project.optional-dependencies]
dev = [
    "pytest>=8.0.0",
    "pytest-asyncio>=0.23.0",
    "ruff>=0.5.0",
]

[project.scripts]
llmstxt = "llmstxt_generator.cli:main"

[project.urls]
Homepage = "https://github.com/bineric-labs/llmstxt-generator"
Repository = "https://github.com/bineric-labs/llmstxt-generator"
Issues = "https://github.com/bineric-labs/llmstxt-generator/issues"

[tool.hatch.build.targets.wheel]
packages = ["src/llmstxt_generator"]

[tool.ruff]
line-length = 100
target-version = "py310"

[tool.ruff.lint]
select = ["E", "F", "I", "N", "W"]
