[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "aiready"
version = "0.1.0"
description = "Make your site AI ready. Generate llms.txt files for AI agents."
readme = "README.md"
license = "MIT"
authors = [
    { name = "Bineric", email = "hello@bineric.com" }
]
keywords = ["ai", "llms", "llms.txt", "ai-ready", "ai-agents", "crawler"]
classifiers = [
    "Development Status :: 4 - Beta",
    "Intended Audience :: Developers",
    "License :: OSI Approved :: MIT License",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
]
requires-python = ">=3.10"
dependencies = [
    "httpx>=0.27.0",
    "beautifulsoup4>=4.12.0",
    "lxml>=5.0.0",
    "click>=8.1.0",
    "rich>=13.0.0",
    "python-dotenv>=1.0.0",
]

[project.optional-dependencies]
dev = [
    "pytest>=8.0.0",
    "pytest-asyncio>=0.23.0",
    "ruff>=0.5.0",
]

[project.scripts]
aiready = "aiready.cli:main"

[project.urls]
Homepage = "https://github.com/bineric-labs/aiready"
Repository = "https://github.com/bineric-labs/aiready"
Issues = "https://github.com/bineric-labs/aiready/issues"

[tool.hatch.build.targets.wheel]
packages = ["src/aiready"]

[tool.ruff]
line-length = 100
target-version = "py310"

[tool.ruff.lint]
select = ["E", "F", "I", "N", "W"]
